# football2607

./: .gitignore  AGENTS.md  CONTEXT.md  start_all.bat
FetchData/: .env.example  .gitignore  README.md  pyproject.toml
FetchData/fetch_data/: __init__.py  cli.py  match_completion.py  models.py  observability.py  odds_cli.py  odds_postgres.py  postgres.py  proxy.py  schema.py  status_cli.py  status_sync.py
FetchData/sql/: 001_match_status.sql  002_match_basic_info.sql  query_failed_odds_pages.sql
FetchData/tests/: test_cli.py  test_match_completion.py  test_observability.py  test_odds_cli.py  test_odds_postgres.py  test_postgres.py  test_proxy.py  test_status_cli.py  test_status_sync.py  test_titan007.py  test_titan007_detail.py  test_titan007_odds.py
SimpleCrawler/: .env.example  README.md  check_match_completion.py  concurrent_pages.py  crawl_status.py  fetch_archive_match_ids.py  fetch_match_details.py  fetch_match_ids.py  fetch_odds_pages.py  odds_collection.py  odds_market_state.py  proxy_scheduler.py  push_wecom_matches.py  pyproject.toml  run_scheduler.py
SimpleCrawler/simple_crawler/: __init__.py  companies.py  dashboard_statistics.py  file_lock.py  models.py  monitoring.py  odds_parser.py
SimpleCrawler/sql/: create_odds_filter_views.sql
SimpleCrawler/tests/: test_check_match_completion.py  test_companies.py  test_concurrent_pages.py  test_crawl_status.py  test_dashboard_statistics.py  test_fetch_archive_match_ids.py  test_fetch_match_details.py  test_fetch_match_ids.py  test_fetch_odds_pages.py  test_file_lock.py  test_odds_collection.py  (+5 more)
(+32 files in other folders)
