[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football-fetch-data"
version = "0.1.0"
description = "Extensible football match data collectors"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.40,<2",
  "psycopg2-binary>=2.9,<3",
  "python-dotenv>=1,<2",
]

[project.scripts]
fetch-odds = "fetch_data.odds_cli:main"
sync-match-status = "fetch_data.status_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fetch_data*"]

[tool.setuptools.package-data]
"fetch_data.migrations" = ["*.sql"]
