[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football-simple-crawler"
version = "0.1.0"
description = "Standalone Titan007 match and odds crawler"
requires-python = ">=3.9"
dependencies = [
  "lxml>=5,<7",
  "playwright>=1.40,<2",
  "psycopg2-binary>=2.9,<3",
  "python-dotenv>=1,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_crawler*"]
